--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: weixin
 on:
   workflow_dispatch:
   schedule: 
-    # 代表国际标准时间1点(后面那个)0分（前面那个），北京时间需要+8小时，代表北京时间上午8点运行
-    - cron: '1 0 * * *'
+    # 代表国际标准时间(后面那个)点（前面那个）分，北京时间需要+8小时，代表北京时间上午8点运行
+    - cron: '45 23 * * *'
 jobs:
 #将工作流程中运行的所有作业组合在一起
   build:
